# Argon

./: .gitignore  Argon.sln  CMakeLists.txt  README.md  generate_solutions.bat
Argon/: Argon.sln  Argon.vcxproj  Argon.vcxproj.filters  CMakeLists.txt  TODO.md
Argon/application/: Application.h  ArgonApplication.cpp  ArgonEngine.cpp
Argon/core/: Argon.h  Macro.h
Argon/tools/: Logger.h  NonCopyable.h  Singleton.h
Playground/: CMakeLists.txt  Playground.vcxproj  main.cpp
Sources/Argon/: Argon.h  Test_EventManager.cpp
Sources/Argon/application/: ArgonApplication.cpp  ArgonApplication.h  ArgonEngine.h
Sources/Argon/core/: EventManager.cpp  EventManager.h  StringId.cpp  StringId.h
Sources/Argon/core/tests/: Test_EventManager.cpp  Test_EventManager.h  Test_StringId.cpp  Test_StringId.h
Sources/Playground/: main.cpp
